--- a/src/app/modules/full-layout/modules/circle/pages/circle-open-circle/circle-open-circle.page.html
+++ b/src/app/modules/full-layout/modules/circle/pages/circle-open-circle/circle-open-circle.page.html
@@ -7,13 +7,13 @@
 					<div class="align-right">
 						<form class="w-search">
 							<div class="form-group with-button">
-								<input class="form-control" type="text" placeholder="Search the circles...">
+								<input class="form-control" type="text" placeholder="Search topics...">
 								<button>
 									<svg class="olymp-magnifying-glass-icon"><use xlink:href="/assets/icons/icons.svg#olymp-magnifying-glass-icon"></use></svg>
 								</button>
 							</div>
 						</form>
-						<button [routerLink]="['/circles/topic/create']" class="btn btn-blue btn-md">Create New Topic</button>
+						<button [routerLink]="['topic/create']" class="btn btn-blue btn-md">Create New Topic</button>
 					</div>
 				</div>
 			</div>
@@ -34,11 +34,11 @@
 					<tr>
 
 						<th class="forum">
-							Forum
+							Topic
 						</th>
 
 						<th class="topics">
-							Topics
+
 						</th>
 
 						<th class="posts">
@@ -54,73 +54,20 @@
 					</thead>
 
 					<tbody>
-					<tr>
-						<td class="forum">
-							<div class="forum-item">
-								<img src="/assets/img/forum7.png" alt="forum">
-								<div class="content">
-									<a href="#" class="h6 title">Comics</a>
-									<p class="text">Talk about dinner parties, reunions and more!</p>
-								</div>
-							</div>
-						</td>
-						<td class="topics">
-							<a href="#" class="h6 count">11</a>
-						</td>
-						<td class="posts">
-							<a href="#" class="h6 count">36</a>
-						</td>
-						<td class="freshness">
-							<div class="author-freshness">
-								<div class="author-thumb">
-									<img src="/assets/img/avatar40-sm.jpg" alt="author">
-								</div>
-								<a href="#" class="h6 title">Sadia Khan</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">13 hours, 58 minutes ago</time>
-							</div>
-						</td>
-					</tr>
 
-					<tr>
-						<td class="forum">
-							<div class="forum-item">
-								<img src="/assets/img/forum8.png" alt="forum">
-								<div class="content">
-									<a href="#" class="h6 title">Anime and Manga</a>
-									<p class="text">All related to your favourite movies and tv shows!</p>
-								</div>
-							</div>
-						</td>
-						<td class="topics">
-							<a href="#" class="h6 count">25</a>
-						</td>
-						<td class="posts">
-							<a href="#" class="h6 count">74</a>
-						</td>
-						<td class="freshness">
-							<div class="author-freshness">
-								<div class="author-thumb">
-									<img src="/assets/img/avatar76-sm.jpg" alt="author">
-								</div>
-								<a href="#" class="h6 title">Maryam Ahamd</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">12 hours, 0 minutes ago</time>
-							</div>
-						</td>
-					</tr>
-
-					<tr class="bg-smoke-light">
+					<tr class="bg-smoke-light" *ngFor="let topic of this.topics" >
 						<td class="forum">
 							<div class="forum-item">
 								<i class="icon fa fa-star" aria-hidden="true"></i>
 								<div class="content">
-									<a [routerLink]="['/circles/topic']" class="h6 title">This year’s ComixCon will have the best presentations</a>
+									<a [routerLink]="['topic', topic.id]" class="h6 title">{{topic.title}}</a>
 								</div>
 								<div class="author-started">
 									<span>Started by:</span>
 									<div class="author-thumb">
 										<img src="/assets/img/avatar48-sm.jpg" alt="author">
 									</div>
-									<a href="#" class="h6 title">Mahira Khan</a>
+									<a href="#" class="h6 title">{{topic.user}}</a>
 								</div>
 							</div>
 						</td>
@@ -141,7 +88,7 @@
 						</td>
 					</tr>
 
-					<tr>
+					<!-- <tr>
 						<td class="forum">
 							<div class="forum-item">
 								<div class="content">
@@ -363,7 +310,7 @@
 								<time class="entry-date updated" datetime="2017-06-24T18:18">5 hours, 58 minutes ago</time>
 							</div>
 						</td>
-					</tr>
+					</tr> -->
 
 					</tbody>
 				</table>
@@ -387,74 +334,9 @@
 		</div>
 
 		<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-xs-12">
-			<div class="ui-block">
-				<div class="ui-block-title">
-					<h6 class="title">Featured Topics</h6>
-				</div>
-				<div class="ui-block-content">
-					<ul class="widget w-featured-topics">
-						<li>
-							<i class="icon fa fa-star" aria-hidden="true"></i>
-							<div class="content">
-								<a href="#" class="h6 title">The new Goddess of War trailer was launched at E3!</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">2 hours, 16 minutes ago</time>
-							</div>
-						</li>
-						<li>
-							<i class="icon fa fa-star" aria-hidden="true"></i>
-							<div class="content">
-								<a href="#" class="h6 title">This year’s ComixCon will have the best presentations</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">14 hours, 36 minutes ago</time>
-							</div>
-						</li>
-						<li>
-							<i class="icon fa fa-star" aria-hidden="true"></i>
-							<div class="content">
-								<a href="#" class="h6 title">Here are the behind-the-scenes photos of “Vilords”</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">9 hours, 8 minutes ago</time>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
+			<app-circle-featured-topics></app-circle-featured-topics>
 
-			<div class="ui-block">
-				<div class="ui-block-title">
-					<h6 class="title">Recent Topics</h6>
-				</div>
-				<div class="ui-block-content">
-					<ul class="widget w-featured-topics">
-						<li>
-							<div class="content">
-								<a href="#" class="h6 title">Summer is Coming! Picnic in the east boulevard park</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">26 minutes ago</time>
-								<div class="forums">The Community</div>
-							</div>
-						</li>
-						<li>
-							<div class="content">
-								<a href="#" class="h6 title">Kung Fighters released a new video, check it out here!</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">44 minutes ago</time>
-								<div class="forums">The Boombox</div>
-							</div>
-						</li>
-						<li>
-							<div class="content">
-								<a href="#" class="h6 title">What’s your favourite season?</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">59 minutes ago</time>
-								<div class="forums">The Community</div>
-							</div>
-						</li>
-						<li>
-							<div class="content">
-								<a href="#" class="h6 title">Who had the best presentation at this year’s E3? Rate them!</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">1 hour, 3 minutes ago</time>
-								<div class="forums">Arcade Planet</div>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
+			<app-circle-recent-topics></app-circle-recent-topics>
 
 		</div>
 
