--- a/src/app/modules/full-layout/modules/circle/pages/circles/circles.page.html
+++ b/src/app/modules/full-layout/modules/circle/pages/circles/circles.page.html
@@ -3,15 +3,18 @@
 		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div class="ui-block responsive-flex">
 				<div class="ui-block-title">
-					<div class="h6 title">YelloPlane Circles</div>
-					<form class="w-search">
-						<div class="form-group with-button">
-							<input class="form-control" type="text" placeholder="Search the circles...">
-							<button>
-								<svg class="olymp-magnifying-glass-icon"><use xlink:href="/assets/icons/icons.svg#olymp-magnifying-glass-icon"></use></svg>
-							</button>
-						</div>
-					</form>
+          <div class="h6 title">YelloPlane Circles</div>
+          <div class="align-right">
+            <form class="w-search">
+              <div class="form-group with-button">
+                <input class="form-control" type="text" placeholder="Search the circles...">
+                <button>
+                  <svg class="olymp-magnifying-glass-icon"><use xlink:href="/assets/icons/icons.svg#olymp-magnifying-glass-icon"></use></svg>
+                </button>
+              </div>
+            </form>
+            <button [routerLink]="['/circles/circle/create']" class="btn btn-blue btn-md">Create New Circle</button>
+          </div>
 				</div>
 			</div>
 		</div>
@@ -31,7 +34,7 @@
 					<tr>
 
 						<th class="forum">
-							Forum
+							Circle
 						</th>
 
 						<th class="topics">
@@ -51,13 +54,13 @@
 					</thead>
 
 					<tbody>
-					<tr>
+					<tr *ngFor="let circle of this.circles" >
 						<td class="forum">
 							<div class="forum-item">
 								<img src="/assets/img/forum1.png" alt="forum">
 								<div class="content">
-									<a [routerLink]="['/circles/circle']" class="h6 title">The Community</a>
-									<p class="text">Talk about dinner parties, reunions and more!</p>
+									<a [routerLink]="['/circles/circle',circle.id]" class="h6 title">{{circle.title}}</a>
+									<p class="text">{{circle.description}}</p>
 								</div>
 							</div>
 						</td>
@@ -78,7 +81,7 @@
 						</td>
 					</tr>
 
-					<tr>
+					<!-- <tr>
 						<td class="forum">
 							<div class="forum-item">
 								<img src="/assets/img/forum2.png" alt="forum">
@@ -219,7 +222,7 @@
 								<time class="entry-date updated" datetime="2017-06-24T18:18">4 months, 12 hours ago</time>
 							</div>
 						</td>
-					</tr>
+					</tr> -->
 
 					</tbody>
 				</table>
@@ -228,74 +231,9 @@
 		</div>
 
 		<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-xs-12">
-			<div class="ui-block">
-				<div class="ui-block-title">
-					<h6 class="title">Featured Topics</h6>
-				</div>
-				<div class="ui-block-content">
-					<ul class="widget w-featured-topics">
-						<li>
-							<i class="icon fa fa-star" aria-hidden="true"></i>
-							<div class="content">
-								<a href="#" class="h6 title">The new Goddess of War trailer was launched at E3!</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">2 hours, 16 minutes ago</time>
-							</div>
-						</li>
-						<li>
-							<i class="icon fa fa-star" aria-hidden="true"></i>
-							<div class="content">
-								<a href="#" class="h6 title">This year’s ComixCon will have the best presentations</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">14 hours, 36 minutes ago</time>
-							</div>
-						</li>
-						<li>
-							<i class="icon fa fa-star" aria-hidden="true"></i>
-							<div class="content">
-								<a href="#" class="h6 title">Here are the behind-the-scenes photos of “Vilords”</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">9 hours, 8 minutes ago</time>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
+			<app-circle-featured-topics></app-circle-featured-topics>
 
-			<div class="ui-block">
-				<div class="ui-block-title">
-					<h6 class="title">Recent Topics</h6>
-				</div>
-				<div class="ui-block-content">
-					<ul class="widget w-featured-topics">
-						<li>
-							<div class="content">
-								<a href="#" class="h6 title">Summer is Coming! Picnic in the east boulevard park</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">26 minutes ago</time>
-								<div class="forums">The Community</div>
-							</div>
-						</li>
-						<li>
-							<div class="content">
-								<a href="#" class="h6 title">Kung Fighters released a new video, check it out here!</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">44 minutes ago</time>
-								<div class="forums">The Boombox</div>
-							</div>
-						</li>
-						<li>
-							<div class="content">
-								<a href="#" class="h6 title">What’s your favourite season?</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">59 minutes ago</time>
-								<div class="forums">The Community</div>
-							</div>
-						</li>
-						<li>
-							<div class="content">
-								<a href="#" class="h6 title">Who had the best presentation at this year’s E3? Rate them!</a>
-								<time class="entry-date updated" datetime="2017-06-24T18:18">1 hour, 3 minutes ago</time>
-								<div class="forums">Arcade Planet</div>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
+      <app-circle-recent-topics></app-circle-recent-topics>
 
 		</div>
 	</div>
