--- a/src/app/modules/full-layout/modules/circle/pages/circles/circles.page.html
+++ b/src/app/modules/full-layout/modules/circle/pages/circles/circles.page.html
@@ -13,7 +13,7 @@
                 </button>
               </div>
             </form>
-            <button [routerLink]="['/circles/circle/create']" class="btn btn-blue btn-md">Create New Circle</button>
+            <button [routerLink]="['circle/create']" class="btn btn-blue btn-md">Create New Circle</button>
           </div>
 				</div>
 			</div>
